# test_with_cMake

./: .gitignore  CMakeLists.txt  README.md
test_task/: CMakeLists.txt  test_task.cpp  test_task.h
